--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "express-handlebars": "^3.1.0"
   },
   "engines": {
     "node": "10.x"
