--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
-{"lodash": "^4.17.21",
+
+{
+  
   "name": "playlist-app",
   "version": "0.0.1",
   "description": "A little playlist maker",
@@ -11,6 +13,7 @@
     "winston": "^3.2.1",
     "express-handlebars": "^3.1.0"
   },
+  "lodash": "^4.17.21",
   "engines": {
     "node": "10.x"
   },
