👟🌠 Checkpoint ./controllers/playlist.js:27940396/298 ./package.json:27940396/1802 ./models/playlist-store.js:27940396/897 ./views/playlist.hbs:27940396/55

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "winston": "^3.2.1",
-    "express-handlebars": "^3.1.0"
+    "express-handlebars": "^3.1.0",
+    "lodash": "^4.17.21"
   },
-  "lodash": "^4.17.21",
   "engines": {
     "node": "10.x"
   },
