--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "lowdb": "^0.14.0",
+    "uuid": "^3.4.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "winston": "^3.2.1",
     "express-handlebars": "^3.1.0",
