🌦📈 Checkpoint ./package.json:27940396/984 ./views/partials/menu.hbs:27940396/1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   
-  "name": "playlist-app",
+  "name": "league-app",
   "version": "0.0.1",
   "description": "A little playlist maker",
   "main": "server.js",
