--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
-
 {
-  
   "name": "league-app",
   "version": "0.0.1",
-  "description": "A little playlist maker",
+  "description": "A little league maker",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "lowdb": "^0.14.0",
-    "uuid": "^3.4.0",
+    "lowdb": "^1.0.0",
+    "uuid": "^8.3.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "winston": "^3.2.1",
-    "express-handlebars": "^3.1.0",
+    "winston": "^3.3.3",
+    "express-handlebars": "^5.2.1",
     "lodash": "^4.17.21"
   },
   "engines": {
