🚕⛽️ Checkpoint ./models/developer-store.js:27940396/21 ./package.json:27940396/34

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 
 {
   
-  "name": "playlist-app",
+  "name": "league-app",
   "version": "0.0.1",
-  "description": "A little playlist maker",
+  "description": "A little league maker",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
