--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lowdb": "^0.14.0",
     "uuid": "^3.4.0",
+    "cookie-parser": "^1.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "winston": "^3.2.1",
